--- a/logservice/pom.xml
+++ b/logservice/pom.xml
@@ -23,13 +23,13 @@
     <parent>
         <artifactId>siddhi-mock-parent</artifactId>
         <groupId>io.siddhi.sample.mock.services</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>logservice</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>jar</packaging>
     <name>Siddhi - Logging Mock Service</name>
 
