Add mock service to provide ride estimates

--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
 
     <modules>
         <module>logservice</module>
+        <module>ride-estimate</module>
     </modules>
 
     <dependencyManagement>
